examples/test/testpolicy9509.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9509
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key31: value43
      key8: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value36
      podSelector:
        matchLabels:
          key35: value25
          key37: value25
